high contrast and low contrast fixed

--- a/src/components/ChatAccessibility/AccessbilityButtons/Contrast.css
+++ b/src/components/ChatAccessibility/AccessbilityButtons/Contrast.css
@@ -20,7 +20,7 @@ body.high-contrast .MuiTypography-root {
     background-color: black !important;
 }
 
-.high-contrast {
+body.high-contrast {
     background-color: black !important;
     color: yellow !important;
 }
@@ -29,21 +29,31 @@ body.high-contrast input {
     color: yellow !important;
 }
 
-/* body.high-contrast .MuiOutlinedInput-notchedOutline {
-  border-color: yellow !important;
-  background-color: black !important;
+body.high-contrast .css-1g24dm6-MuiInputBase-input-MuiOutlinedInput-input {
+    color: yellow !important;
 }
 
-body.high-contrast .MuiOutlinedInput-notchedOutline legend {
-  color: yellow !important;
-} */
+body.high-contrast .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
+    color: yellow !important;
+}
 
+body.high-contrast .MuiOutlinedInput-notchedOutline.css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+    border-color: yellow !important;
+    /* Make the border visible in high contrast */
+}
+
+body.high-contrast .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+    color: yellow !important;
+    background-color: black !important;
+}
+
+
+
+/* # For soft contrast  */
 
 body.kindle-mode {
     background-color: #eaeaea !important;
-    /* Soft light gray */
     color: #333333 !important;
-    /* Soft dark gray */
 }
 
 body.kindle-mode a {
@@ -62,6 +72,15 @@ body.kindle-mode .MuiTypography-root {
     background-color: #eaeaea !important;
 }
 
+body.kindle-mode .MuiToolbar-root {
+    background-color: #eaeaea !important;
+    color: #333333 !important;
+}
+
+body.kindle-mode .MuiToolbar-root * {
+    color: #333333 !important;
+}
+
 body.kindle-mode input {
     background-color: #f3f3f3 !important;
     color: #333333 !important;
@@ -70,4 +89,42 @@ body.kindle-mode input {
 
 body.kindle-mode .MuiPaper-root {
     background-color: #f5f5f5 !important;
+}
+
+body.kindle-mode .css-19ezdg1-MuiGrid-root {
+    background-color: #AEAEAE !important;
+    color: #333333 !important;
+    border: 1px solid #AEAEAE !important;
+}
+
+body.kindle-mode .Footer_footerRoot__y8cjJ {
+    background-color: #AEAEAE !important;
+    color: #333333 !important;
+}
+
+body.kindle-mode .css-13pnn78 {
+    background-color: #AEAEAE !important;
+    color: #333333 !important;
+    border: 1px solid #AEAEAE !important;
+}
+
+body.kindle-mode .Footer_ctaSection__TruCT {
+    background-color: #AEAEAE !important;
+    color: #333333 !important;
+    border: 1px solid #AEAEAE !important;
+}
+
+
+body.kindle-mode .MuiOutlinedInput-notchedOutline.css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+    border-color: #333333 !important;
+}
+
+body.kindle-mode .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+    color: #333333 !important;
+    background-color: #AEAEAE !important;
+}
+
+body.kindle-mode .css-1g24dm6-MuiInputBase-input-MuiOutlinedInput-input {
+    color: #333333 !important;
+    background-color: #AEAEAE !important;
 }
